テルペーン

--- a/sass/component/_component.scss
+++ b/sass/component/_component.scss
@@ -1,9 +1,11 @@
 @import "c-backgrad";
 @import "c-cloud";
 @import "c-firetext";
+@import "c-terpenes";
 @import "c-barbox";
 @import "c-button";
 @import "c-tglbutton";
 @import "c-shadow";
 @import "c-gradborder";
 @import "c-anime";
+@import "c-ranknum";
