--- a/sass/component/_c-terpenes.scss
+++ b/sass/component/_c-terpenes.scss
@@ -4,6 +4,11 @@
         flex-direction: column;
         align-items: center;
         .terp--icon{
+            background:linear-gradient(10deg,#a0a0a0 00%, var(--cbase) 70%);
+            background-clip:text;
+            text-fill-color:transparent;
+            -webkit-background-clip:text;
+            -webkit-text-fill-color:transparent;
             filter:drop-shadow(1px 1px 1px black);
         }
         .terp--kind{
