--- a/sass/layout/_l-strain.scss
+++ b/sass/layout/_l-strain.scss
@@ -75,3 +75,11 @@
     .strrank--text.strrank--2{font-size:1.2em;}
     .strrank--text.strrank--3{font-size:1.0em;}
 }
+.strfam{
+    .strfam--h3{
+        margin-left:0.4rem;
+    }
+    a{
+        font-size:1.4em;
+    }
+}
