--- a/sass/project/_p-pairline.scss
+++ b/sass/project/_p-pairline.scss
@@ -40,5 +40,8 @@
         flex-direction: column;
         align-items: flex-end;
         //margin: 0 1.3rem;
+        .fromline{
+            margin: 0 1.3rem;
+        }
     }
 }
