--- a/sass/project/_p-pairline.scss
+++ b/sass/project/_p-pairline.scss
@@ -42,6 +42,7 @@
         //margin: 0 1.3rem;
         .fromline{
             margin: 0 1.3rem;
+            text-align: right;
         }
     }
 }
